# steam-games-data-mining

./: .gitignore  README.md  data_analysis.ipynb  data_cleaning.ipynb  feature_extraction.ipynb  games_scraper.ipynb  justfile  model.ipynb  pyproject.toml
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: ci.yml  conventional-commit-pr-name.yml
