[project]
name = "steam-games-data-mining"
version = "0.1.0"
description = "desc"
authors = [{ name = "Piotr Karaś", email = "pkaras@student.agh.edu.pl" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "copier>=9.7.1,<10",
    "fawltydeps>=0.20,<0.21",
    "flake8>=7.3.0,<8",
    "flake8-pyproject>=1.2.3,<2",
    "isort[colors]>=6.0.1,<7",
    "mypy>=1.16.1,<2",
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
omit = ["*test*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError()",
]

[tool.fawltydeps]
code = ["steam_games_data_mining"]
deps = ["pyproject.toml"]
ignore_unused = [
    # Dev dependencies. This list should contain ALL of them!
    "black",
    "copier",
    "fawltydeps",
    "flake8",
    "flake8-pyproject",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.flake8]
# W503 == line break before binary operator. Conflicts with W504 - line break after binary operator.
# E203 == whitespace before ':' Conflicts with black
ignore = ['W503', 'E203']
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
order_by_type = false
known_first_party = ["steam_games_data_mining"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_traceback = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --cov=. --cov-fail-under=90.0 --cov-config=.coveragerc"
pythonpath = ["."]
